# ars-serial

./: README.md  build-and-release.yml  pyproject.toml
.github/workflowes/: build-and-release.yml
.github/workflows/: build-and-release.yml  build-by-copilot.yml
com/: __init__.py  com.py
tests/: test.py
